--- a/figures/heuristics.tex
+++ b/figures/heuristics.tex
@@ -24,7 +24,7 @@
       child {node [circle,draw] (o) {}}
       child {node [circle,draw] (p) {}
         child [grow=right] {node (q) {} edge from parent[draw=none]
-          child [grow=right] {node (q) {} edge from parent[draw=none]
+          child [grow=right] {node (w) {} edge from parent[draw=none]
             child [grow=up] {node (r) {} edge from parent[draw=none]
               child [grow=up] {node (s) {} edge from parent[draw=none]
                 child [grow=up] {node (t) {} edge from parent[draw=none]
