--- a/macros-ph.tex
+++ b/macros-ph.tex
@@ -20,7 +20,7 @@
   \else
     \renewcommand{\currentSortLabel}{\currentSort}
   \fi
-  \begin{scope}[shift={\currentScope}]
+  \begin{scope}[shift={#1}]
   \ifthenelse{\equal{\currentAlign}{l}}{
     \filldraw[process box] (-0.5,-0.5) rectangle (0.5,\currentSize-0.5);
     \node[sort] at (-0.2,\currentSize-0.4) {\currentSortLabel};
