--- a/main.tex
+++ b/main.tex
@@ -12,9 +12,9 @@
 \usepackage{hyperref}
 \usepackage{subfigure}
 \usepackage{graphicx}
+\usepackage{blkarray}
 \usepackage{pgfplots}
 \usepackage{multirow}
-\usepackage{kbordermatrix}
 \usepackage{siunitx}
 \usepackage[framemethod=tikz]{mdframed}
 \usepackage{multicol}
